Replace .collect(...) with .toList()